--- a/sql-alchemy-challenge/.vscode/settings.json
+++ b/sql-alchemy-challenge/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "C:\\Users\\AstroNeo\\anaconda3\\envs\\conda_env\\python.exe"
+    "python.pythonPath": "C:\\Users\\gthot\\anaconda3\\envs\\conda_env\\python.exe"
 }
